--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://omidSharifi526.github.io/iranBinApp",
+  "homepage": "http://omidSharifi526.github.io/iranBinApp",
   "name": "iranbinapp",
   "version": "0.1.0",
   "private": true,
