--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "name": "Sarv Bonyan Adabi",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "../src/Imgs/logo-ico.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.ico",
+      "src": "../src/Imgs/logo-ico.ico",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.ico",
+      "src": "../src/Imgs/logo-ico.ico",
       "type": "image/png",
       "sizes": "512x512"
     }
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#fffff05"
 }
