--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "name": "Sarv Bonyan Adabi",
   "icons": [
     {
-      "src": "../src/Imgs/logo-ico.ico",
+      "src": "./favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "../src/Imgs/logo-ico.ico",
+      "src": "./favicon.ico",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "../src/Imgs/logo-ico.ico",
+      "src": "./favicon.ico",
       "type": "image/png",
       "sizes": "512x512"
     }
