--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#fffff05"
+  "background_color": "#fffffa"
 }
